# Nadeshiko-Python

./: .gitignore  ADDITIONAL_FEATURES_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  GITHUB_UPLOAD_GUIDE.md  GITHUB_UPLOAD_INSTRUCTIONS.md  LEGAL_ANALYSIS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_EN.md  WORKING_STATUS.md  WORLD_CHANGING_UPDATE.md  __init__.py  children_editor.py  correct_example.py  debug_full.py  debug_function.py  debug_function_call.py  debug_print.py  debug_step.py  debug_step2.py  debug_translate.py  demo_final.py  demo_simple.py  demo_working.py  example_program.py  gui_app.py  nadesiko_clock.py  pyproject.toml  pyproject_minimal.toml  requirements.txt  setup.py  simple_example.py  simple_nadeshiko_clock.py  start_gui.py  start_gui_designer.py  test_comprehensive.py  test_import.py  (+5 more)
.github/workflows/: ci.yml  release.yml
docs/: CORE_FILES.md  EDUCATIONAL_VISION.md  EXTENSIBILITY.md  GITHUB_GUIDE.md  GLOBAL_CHILDRENS_VISION.md  README.md  README_EN.md  README_bilingual.md  README_bilingual_EN.md  README_nadesiko.md  README_nadesiko_EN.md  TECHNICAL_PHILOSOPHY.md  USAGE_EXAMPLES.md  USAGE_EXAMPLES_EN.md
examples/: bilingual_examples.py  bilingual_examples_fixed.py  bilingual_working_example.py  children_examples.py  children_examples_simple.py  children_examples_working.py  examples.py  gui_samples.nako  module_usage_examples.py  nadesiko_complete_examples.py  nadesiko_examples.py
src/: __init__.py  ai_nlp_engine.py  bilingual_parser.py  children_english_parser.py  children_english_parser_fixed.py  cloud_storage.py  collaboration_engine.py  data_structures.py  debug_visualizer.py  educational_gamification.py  english_keywords.py  english_parser.py  error_handler.py  gui_designer.py  intelligent_completion.py  keywords.py  macro_system.py  mobile_companion.py  multilang_support.py  nadesiko_complete.py  nadesiko_complete_commands.py  nadesiko_file.py  nadesiko_functions.py  nadesiko_gui.py  nadesiko_gui_module.py  nadesiko_keywords.py  nadesiko_math.py  nadesiko_parser.py  nadesiko_parser_complete.py  nadesiko_parser_enhanced.py  nadesiko_parser_final.py  nadesiko_parser_fixed.py  nadesiko_string.py  os_commands.py  parser.py  performance_optimizer.py  ui_enhancer.py  visual_programming.py
src/japanese_programming.egg-info/: SOURCES.txt  requires.txt
test_env/: pyvenv.cfg
