[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nadesiko3-python"
version = "2.0.0"
description = "Nadesiko3 Compatible Japanese Programming Language Module"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nadesiko Compatible Module", email = "nadesiko@example.com"}
]
maintainers = [
    {name = "Nadesiko Compatible Module", email = "nadesiko@example.com"}
]
keywords = ["nadesiko3", "japanese", "programming", "education", "beginner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Programming Languages :: Python",
]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
    "Pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.3.0",
    "numpy>=1.20.0",
    "pyautogui>=0.9.0",
    "pyperclip>=1.8.0",
    "pygame>=2.0.0",
    "qrcode>=6.1.0",
    "python-barcode>=0.15.0",
    "cryptography>=3.4.0",
    "pyyaml>=5.4.0",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/nadesiko3-python/nadesiko3-python"
Documentation = "https://github.com/nadesiko3-python/nadesiko3-python/blob/main/README.md"
Repository = "https://github.com/nadesiko3-python/nadesiko3-python"
"Bug Tracker" = "https://github.com/nadesiko3-python/nadesiko3-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py36']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
